<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/me"
        android:icon="@drawable/icon_me"
        android:title="@string/menu_me" />
</menu>